static/css/styles.css
/* ... */
#advanced-options {
  display: flex;
  flex-direction: column;
  margin-top: 1.5rem;
}

#advanced-options.hidden { display: none; }

.advanced-input-wrapper {
  width: 100%;
  display: flex;
  align-items: flex-start;
  margin-bottom: 1rem;
}

.advanced-input-wrapper label {
  flex: 1 1 0;
  padding-right: 1rem;
}

.advanced-input-wrapper label.expire-in { flex: 1 1 34%; }
.advanced-input-wrapper label.description { flex: 1 1 65%; }

.advanced-input-wrapper label:last-child { padding-right: 0; }

.advanced-input-wrapper label input,
.advanced-input-wrapper label select {
  width: 100%;
  margin-top: 0.5rem;
}

/* MAIN TABLE */

#main-table-wrapper {
  width: 1200px;
  max-width: 100%;
  display: flex;
  flex-direction: column;
  flex: 1 1 auto;
  align-items: flex-start;
  padding: 0 1rem;
  margin: 7rem 0 7.5rem;
}

#main-table-wrapper h2 {
  font-weight: 300;
  margin-bottom: 1rem;
}

#main-table-wrapper table thead,
#main-table-wrapper table tbody,
#main-table-wrapper table tfoot {
  min-width: 1000px;
}

#main-table-wrapper tr {
  padding: 0 0.5rem;
}

#main-table-wrapper th,
#main-table-wrapper td {
  padding: 1rem;
}

#main-table-wrapper td {
  font-size: 1rem;
}


#main-table-wrapper table .original-url { flex: 7 7 0; }
#main-table-wrapper table .created-at { flex: 2.5 2.5 0; }
#main-table-wrapper table .short-link { flex: 3 3 0; }
#main-table-wrapper.admin-table-wrapper table .short-link { overflow: visible; }
#main-table-wrapper table .views { flex: 1 1 0; justify-content: flex-end; }
#main-table-wrapper table .actions { flex: 3 3 0; justify-content: flex-end; overflow: visible; }
#main-table-wrapper table .actions a.button,
#main-table-wrapper table .actions button { margin-right: 0.5rem; }
#main-table-wrapper table .actions a.button:last-child,
#main-table-wrapper table .actions button:last-child { margin-right: 0; }

#main-table-wrapper table .users-id { flex: 3 3 0; justify-content: flex-end; }
#main-table-wrapper table .users-email { flex: 9 9 0; }
#main-table-wrapper table .users-created-at { flex: 4 4 0; }
#main-table-wrapper table .users-updated-at { flex: 4 4 0; }
#main-table-wrapper table .users-verified { flex: 3 3 0; overflow: visible; }
#main-table-wrapper table .users-role { flex: 2 2 0; overflow: visible; }
#main-table-wrapper table .users-links-count { flex: 3 3 0; justify-content: flex-end; overflow: visible; }
#main-table-wrapper table .users-actions { flex: 2 2 0; }

#main-table-wrapper table .domains-id { flex: 2 2 0; justify-content: flex-end; }
#main-table-wrapper table .domains-address { flex: 7 7 0; }
#main-table-wrapper table .domains-homepage { flex: 5 5 0; }
#main-table-wrapper table .domains-created-at { flex: 3 3 0; }
#main-table-wrapper table .domains-links-count { flex: 3 3 0; justify-content: flex-end; overflow: visible; }
#main-table-wrapper table .domains-actions { flex: 2 2 0; }

#main-table-wrapper table td.original-url,
#main-table-wrapper table td.created-at,
#main-table-wrapper.admin-table-wrapper table td.short-link,
#main-table-wrapper table td.users-email,
#main-table-wrapper table td.domains-address,
#main-table-wrapper table td.users-created-at, 
#main-table-wrapper table td.users-verified { 
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
}

table .short-link-wrapper { display: flex; align-items: center; }

#main-table-wrapper table td .description {
  display: flex;
  align-items: center;
  margin: 0;
  font-size: 14px;
  color: #888;
}
#main-table-wrapper table td .description a {
  color: #aaa;
  border-bottom-color: #aaa;
}
#main-table-wrapper table td .description svg {
  stroke: #aaa;
  stroke-width: 2;
  width: 0.85em;
  margin-right: 0.25rem;
}
#main-table-wrapper table td .description span { color: #aaa; }
#main-table-wrapper table td .description a:hover { border-bottom-color: transparent; }

#main-table-wrapper table .status {
  font-size: 11px;
  font-weight: bold;
  padding: 4px 12px;
  border-radius: 12px;
  margin-top: 0.25rem;
}

#main-table-wrapper table .status:first-child {
  margin-top: 0;
}

#main-table-wrapper table .status.gray { background-color: var(--table-status-gray-bg-color); }
#main-table-wrapper table .status.green { background-color: hsl(102.4, 100%, 93.3%); }
#main-table-wrapper table .status.red { background-color: hsl(0, 100%, 96.7%); }
#main-table-wrapper table .status.yellow { background-color: hsl(45, 100%, 90%); }

#main-table-wrapper table tr.no-data {
  flex: 1 1 auto; 
  justify-content: center;
  animation: fadein 0.3s ease-in-out;
}

#main-table-wrapper table.htmx-request tbody tr { opacity: 0.5; }
#main-table-wrapper table tr.loading-placeholder { opacity: 0.6 !important; }

#main-table-wrapper table tr.loading-placeholder td,
#main-table-wrapper table tr.no-data td {
  flex: 0 0 auto;
  font-size: 18px;
  font-weight: 300;
}

#main-table-wrapper table tr.loading-placeholder svg.spinner {
  width: 1rem;
  height: auto;
  margin-right: 0.5rem;
  stroke-width: 1.5;
}

#main-table-wrapper table thead tr.controls { justify-content: space-between; }
#main-table-wrapper table thead tr.controls.with-filters { align-items: flex-end; }
#main-table-wrapper table tfoot tr.controls { justify-content: flex-end; }

#main-table-wrapper table th.search {
  flex: 1 1 auto;
  align-items: center;
}

#main-table-wrapper table th.filters {
  flex: 1 1 auto;
  flex-direction: column;
  align-items: start;
}

#main-table-wrapper table th.filters > div {
  display: flex;
  align-items: center;
  margin-bottom: 1rem;
}

#main-table-wrapper table th.filters > div:last-child { margin-bottom: 0; }

#main-table-wrapper table th.nav {
  flex: 0 0 auto;
  align-items: center;
}

#main-table-wrapper table tr.controls .checkbox {
  margin-left: 1rem;
  font-size: 15px;
}

#main-table-wrapper table .limit,
#main-table-wrapper table .pagination {
  display: flex;
  align-items: center;
}

#main-table-wrapper table button.nav { margin-right: 0.75rem; }
/* ... */

